po: remove the colons from applet/info-dialog labels
This is for translator convenience.

--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -849,12 +849,12 @@ msgid "Unknown"
 msgstr "Nieviadoma"
 
 #: ../src/applet-dialogs.c:347 ../src/applet-dialogs.c:420
-msgid "IP Address:"
-msgstr "Adras IP:"
+msgid "IP Address"
+msgstr "Adras IP"
 
 #: ../src/applet-dialogs.c:369
-msgid "Broadcast Address:"
-msgstr "Tranślacyjny adras:"
+msgid "Broadcast Address"
+msgstr "Tranślacyjny adras"
 
 #. Prefix
 #: ../src/applet-dialogs.c:381
@@ -864,8 +864,8 @@ msgid "Unknown"
 msgstr "Nieviadoma"
 
 #: ../src/applet-dialogs.c:382
-msgid "Subnet Mask:"
-msgstr "Maska padsietki:"
+msgid "Subnet Mask"
+msgstr "Maska padsietki"
 
 #: ../src/applet-dialogs.c:492
 #, c-format
@@ -896,21 +896,21 @@ msgid "General"
 msgstr ""
 
 #: ../src/applet-dialogs.c:516
-msgid "Interface:"
-msgstr "Interfejs:"
+msgid "Interface"
+msgstr "Interfejs"
 
 #: ../src/applet-dialogs.c:536
-msgid "Hardware Address:"
-msgstr "Aparatny adras:"
+msgid "Hardware Address"
+msgstr "Aparatny adras"
 
 #. Driver
 #: ../src/applet-dialogs.c:550
-msgid "Driver:"
-msgstr "Drajver:"
+msgid "Driver"
+msgstr "Drajver"
 
 #: ../src/applet-dialogs.c:585
-msgid "Speed:"
-msgstr "Chutkaść:"
+msgid "Speed"
+msgstr "Chutkaść"
 
 #: ../src/applet-dialogs.c:600
 msgid "Security:"
@@ -923,8 +923,8 @@ msgid "IPv4"
 msgstr ""
 
 #: ../src/applet-dialogs.c:638 ../src/applet-dialogs.c:689
-msgid "Default Route:"
-msgstr "Zmoŭčany šlach:"
+msgid "Default Route"
+msgstr "Zmoŭčany šlach"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:658 ../src/applet-dialogs.c:873
@@ -939,26 +939,26 @@ msgstr "Ihnaruj"
 
 #: ../src/applet-dialogs.c:815
 #, fuzzy
-msgid "VPN Type:"
+msgid "VPN Type"
 msgstr "Typ:"
 
 #: ../src/applet-dialogs.c:822
 #, fuzzy
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "Sietkavaja brama"
 
 #: ../src/applet-dialogs.c:828
 #, fuzzy
-msgid "VPN Username:"
+msgid "VPN Username"
 msgstr "Karystalnik:"
 
 #: ../src/applet-dialogs.c:834
-msgid "VPN Banner:"
+msgid "VPN Banner"
 msgstr ""
 
 #: ../src/applet-dialogs.c:840
 #, fuzzy
-msgid "Base Connection:"
+msgid "Base Connection"
 msgstr "Spałučeńnie:"
 
 #: ../src/applet-dialogs.c:842 ../src/libnm-gtk/nm-ui-utils.c:343
@@ -5407,9 +5407,6 @@ msgstr "Typ:"
 
 #~ msgid "The orientation of the tray."
 #~ msgstr "Aryjentacyja abšaru nahadvańniaŭ."
-
-#~ msgid "Speed"
-#~ msgstr "Chutkaść"
 
 #~ msgid ""
 #~ "<span weight=\"bold\" size=\"larger\">Password Required by Wireless "
