--- a/po/da.po
+++ b/po/da.po
@@ -873,12 +873,12 @@ msgid "Unknown"
 msgstr "Ukendt"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP-adresse:"
+msgid "IP Address"
+msgstr "IP-adresse"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Rundsendingsadresse:"
+msgid "Broadcast Address"
+msgstr "Rundsendingsadresse"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -887,8 +887,8 @@ msgid "Unknown"
 msgstr "Ukendt"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Undernetmaske:"
+msgid "Subnet Mask"
+msgstr "Undernetmaske"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -919,21 +919,21 @@ msgid "General"
 msgstr "Generelt"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Grænseflade:"
+msgid "Interface"
+msgstr "Grænseflade"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Hardwareadresse:"
+msgid "Hardware Address"
+msgstr "Hardwareadresse"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Driver:"
+msgid "Driver"
+msgstr "Driver"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Hastighed:"
+msgid "Speed"
+msgstr "Hastighed"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -946,8 +946,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Standardrute:"
+msgid "Default Route"
+msgstr "Standardrute"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -960,25 +960,25 @@ msgid "Ignored"
 msgstr "Ignoreres"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN-type:"
+msgid "VPN Type"
+msgstr "VPN-type"
 
 # gateway?
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN-gateway:"
+msgid "VPN Gateway"
+msgstr "VPN-gateway"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN-brugernavn:"
+msgid "VPN Username"
+msgstr "VPN-brugernavn"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN-banner:"
+msgid "VPN Banner"
+msgstr "VPN-banner"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Basisforbindelse:"
+msgid "Base Connection"
+msgstr "Basisforbindelse"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -4410,7 +4410,7 @@ msgstr "Nøgle i %s"
 #: ../src/libnma/nma-cert-chooser-button.c:176
 #, c-format
 msgid "Certificate in %s"
-msgstr "Certifikat i %s:"
+msgstr "Certifikat i %s"
 
 #: ../src/libnma/nma-cert-chooser-button.c:195
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.c:183
@@ -4443,7 +4443,7 @@ msgstr "Adgangs_kode for %s-certifikat"
 
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.c:255
 msgid "Error logging in: "
-msgstr "Fejl i forsøget på at logge ind:"
+msgstr "Fejl i forsøget på at logge ind"
 
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.c:277
 msgid "Error opening a session: "
