--- a/po/fr.po
+++ b/po/fr.po
@@ -870,12 +870,12 @@ msgid "Unknown"
 msgstr "Inconnue"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "Adresse IP :"
+msgid "IP Address"
+msgstr "Adresse IP "
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Adresse de broadcast :"
+msgid "Broadcast Address"
+msgstr "Adresse de broadcast "
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -884,8 +884,8 @@ msgid "Unknown"
 msgstr "Inconnu"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Masque de sous-réseau :"
+msgid "Subnet Mask"
+msgstr "Masque de sous-réseau "
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -916,21 +916,21 @@ msgid "General"
 msgstr "Général"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Interface :"
+msgid "Interface"
+msgstr "Interface "
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Adresse matérielle :"
+msgid "Hardware Address"
+msgstr "Adresse matérielle "
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Pilote :"
+msgid "Driver"
+msgstr "Pilote "
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Vitesse :"
+msgid "Speed"
+msgstr "Vitesse "
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -943,8 +943,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Route par défaut :"
+msgid "Default Route"
+msgstr "Route par défaut "
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -957,24 +957,24 @@ msgid "Ignored"
 msgstr "Ignoré"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Type de VPN :"
+msgid "VPN Type"
+msgstr "Type de VPN "
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
+msgid "VPN Gateway"
 msgstr "Passerelle pour le VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Nom d'utilisateur pour le VPN :"
+msgid "VPN Username"
+msgstr "Nom d'utilisateur pour le VPN "
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Bannière pour le VPN :"
+msgid "VPN Banner"
+msgstr "Bannière pour le VPN "
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Connexion de base :"
+msgid "Base Connection"
+msgstr "Connexion de base "
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -2739,7 +2739,7 @@ msgstr "Priorité la plus haute (stable)"
 
 #: ../src/connection-editor/ce-page-team.ui.h:3
 msgid "Bandwidth"
-msgstr "Bande passante :"
+msgstr "Bande passante "
 
 #: ../src/connection-editor/ce-page-team.ui.h:4
 msgid "Highest number of ports"
