--- a/po/it.po
+++ b/po/it.po
@@ -875,12 +875,12 @@ msgid "Unknown"
 msgstr "Sconosciuto"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "Indirizzo IP:"
+msgid "IP Address"
+msgstr "Indirizzo IP"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Indirizzo di broadcast:"
+msgid "Broadcast Address"
+msgstr "Indirizzo di broadcast"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -889,8 +889,8 @@ msgid "Unknown"
 msgstr "Sconosciuta"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Maschera di rete:"
+msgid "Subnet Mask"
+msgstr "Maschera di rete"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -921,21 +921,21 @@ msgid "General"
 msgstr "Generale"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Interfaccia:"
+msgid "Interface"
+msgstr "Interfaccia"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Indirizzo hardware:"
+msgid "Hardware Address"
+msgstr "Indirizzo hardware"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Driver:"
+msgid "Driver"
+msgstr "Driver"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Velocità:"
+msgid "Speed"
+msgstr "Velocità"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -948,8 +948,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Instradamento predefinito:"
+msgid "Default Route"
+msgstr "Instradamento predefinito"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -962,25 +962,25 @@ msgid "Ignored"
 msgstr "Ignorata"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Tipo VPN:"
+msgid "VPN Type"
+msgstr "Tipo VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "Gateway VPN:"
+msgid "VPN Gateway"
+msgstr "Gateway VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Nome utente VPN:"
+msgid "VPN Username"
+msgstr "Nome utente VPN"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Banner VPN:"
+msgid "VPN Banner"
+msgstr "Banner VPN"
 
 # o non tradotto? mica me lo ricordo...
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Connessione base:"
+msgid "Base Connection"
+msgstr "Connessione base"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -2815,7 +2815,7 @@ msgstr "Con_teggio riunione multicast"
 
 #: ../src/connection-editor/ce-page-team.ui.h:41
 msgid "Multicast _rejoin interval"
-msgstr "Intervallo _riunione multicast:"
+msgstr "Intervallo _riunione multicast"
 
 #: ../src/connection-editor/ce-page-team.ui.h:46
 msgid "_Hardware Address"
