po: remove the colons from applet/info-dialog labels
This is for translator convenience.

--- a/po/ca.po
+++ b/po/ca.po
@@ -870,12 +870,12 @@ msgid "Unknown"
 msgstr "Desconeguda"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "Adreça IP:"
+msgid "IP Address"
+msgstr "Adreça IP"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "Adreça de difusió:"
+msgid "Broadcast Address"
+msgstr "Adreça de difusió"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -884,8 +884,8 @@ msgid "Unknown"
 msgstr "Desconeguda"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "Màscara de subxarxa:"
+msgid "Subnet Mask"
+msgstr "Màscara de subxarxa"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -916,21 +916,21 @@ msgid "General"
 msgstr "General"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "Interfície:"
+msgid "Interface"
+msgstr "Interfície"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "Adreça del maquinari:"
+msgid "Hardware Address"
+msgstr "Adreça del maquinari"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "Controlador:"
+msgid "Driver"
+msgstr "Controlador"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "Velocitat:"
+msgid "Speed"
+msgstr "Velocitat"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -943,8 +943,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "Ruta predeterminada:"
+msgid "Default Route"
+msgstr "Ruta predeterminada"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -957,24 +957,24 @@ msgid "Ignored"
 msgstr "Ignorada"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "Tipus de VPN:"
+msgid "VPN Type"
+msgstr "Tipus de VPN"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "Passarel·la VPN:"
+msgid "VPN Gateway"
+msgstr "Passarel·la VPN"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "Nom d'usuari de la VPN:"
+msgid "VPN Username"
+msgstr "Nom d'usuari de la VPN"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "Bàner de la VPN:"
+msgid "VPN Banner"
+msgstr "Bàner de la VPN"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "Connexió base:"
+msgid "Base Connection"
+msgstr "Connexió base"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
@@ -1227,12 +1227,12 @@ msgstr "ARP"
 
 #: ../src/connection-editor/ce-page-bond.ui.h:10
 msgid "Bonded _connections"
-msgstr "_Connexions vinculades:"
+msgstr "_Connexions vinculades"
 
 #: ../src/connection-editor/ce-page-bond.ui.h:11
 #: ../src/connection-editor/ce-page-wifi.ui.h:18
 msgid "M_ode"
-msgstr "M_ode:"
+msgstr "M_ode"
 
 #: ../src/connection-editor/ce-page-bond.ui.h:13
 #: ../src/connection-editor/ce-page-bridge.ui.h:3
@@ -1475,12 +1475,12 @@ msgstr "%s no vàlid (%s)"
 #: ../src/connection-editor/ce-page.c:388
 #, c-format
 msgid "invalid interface-name for %s (%s): "
-msgstr "nom no vàlid d'interfície per a %s (%s):"
+msgstr "nom no vàlid d'interfície per a %s (%s)"
 
 #: ../src/connection-editor/ce-page.c:392
 #, c-format
 msgid "invalid interface-name (%s): "
-msgstr "nom no vàlid d'interfície (%s):"
+msgstr "nom no vàlid d'interfície (%s)"
 
 #: ../src/connection-editor/ce-page.c:571
 msgid "can’t parse device name"
@@ -1493,7 +1493,7 @@ msgstr "Adreça del maquinari no vàlida"
 #: ../src/connection-editor/ce-page.c:611
 #, c-format
 msgid "invalid %s (%s): "
-msgstr "%s no vàlid (%s):"
+msgstr "%s no vàlid (%s)"
 
 #: ../src/connection-editor/ce-page.c:612
 #: ../src/connection-editor/ce-page.c:617
@@ -4447,11 +4447,11 @@ msgstr "_Contrasenya del certificat %s"
 
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.c:255
 msgid "Error logging in: "
-msgstr "Error en iniciar a la sessió:"
+msgstr "Error en iniciar a la sessió"
 
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.c:277
 msgid "Error opening a session: "
-msgstr "S'ha produït un error en obrir la sessió:"
+msgstr "S'ha produït un error en obrir la sessió"
 
 #: ../src/libnma/nma-pkcs11-cert-chooser-dialog.ui.h:1
 msgid "_Unlock token"
