--- a/po/ko.po
+++ b/po/ko.po
@@ -866,12 +866,12 @@ msgid "Unknown"
 msgstr "알 수 없음"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP 주소:"
+msgid "IP Address"
+msgstr "IP 주소"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "브로드캐스트 주소:"
+msgid "Broadcast Address"
+msgstr "브로드캐스트 주소"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -880,8 +880,8 @@ msgid "Unknown"
 msgstr "알 수 없음"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "서브넷 마스크:"
+msgid "Subnet Mask"
+msgstr "서브넷 마스크"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -912,21 +912,21 @@ msgid "General"
 msgstr "일반"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "인터페이스:"
+msgid "Interface"
+msgstr "인터페이스"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "하드웨어 주소:"
+msgid "Hardware Address"
+msgstr "하드웨어 주소"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "드라이버:"
+msgid "Driver"
+msgstr "드라이버"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "속도:"
+msgid "Speed"
+msgstr "속도"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -939,8 +939,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "기본 경로:"
+msgid "Default Route"
+msgstr "기본 경로"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -953,24 +953,24 @@ msgid "Ignored"
 msgstr "무시함"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "가상 사설망 형식:"
+msgid "VPN Type"
+msgstr "가상 사설망 형식"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "가상 사설망 게이트웨이:"
+msgid "VPN Gateway"
+msgstr "가상 사설망 게이트웨이"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "가상 사설망 사용자 이름:"
+msgid "VPN Username"
+msgstr "가상 사설망 사용자 이름"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "가상 사설망 추방자:"
+msgid "VPN Banner"
+msgstr "가상 사설망 추방자"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "기반 연결:"
+msgid "Base Connection"
+msgstr "기반 연결"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
