--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -844,12 +844,12 @@ msgid "Unknown"
 msgstr "不明"
 
 #: ../src/applet-dialogs.c:348 ../src/applet-dialogs.c:421
-msgid "IP Address:"
-msgstr "IP 位址："
+msgid "IP Address"
+msgstr "IP 位址"
 
 #: ../src/applet-dialogs.c:370
-msgid "Broadcast Address:"
-msgstr "廣播位址："
+msgid "Broadcast Address"
+msgstr "廣播位址"
 
 #. Prefix
 #: ../src/applet-dialogs.c:382
@@ -858,8 +858,8 @@ msgid "Unknown"
 msgstr "不明"
 
 #: ../src/applet-dialogs.c:383
-msgid "Subnet Mask:"
-msgstr "子網路遮罩："
+msgid "Subnet Mask"
+msgstr "子網路遮罩"
 
 #: ../src/applet-dialogs.c:493
 #, c-format
@@ -890,21 +890,21 @@ msgid "General"
 msgstr "一般"
 
 #: ../src/applet-dialogs.c:517
-msgid "Interface:"
-msgstr "介面："
+msgid "Interface"
+msgstr "介面"
 
 #: ../src/applet-dialogs.c:537
-msgid "Hardware Address:"
-msgstr "硬體位址："
+msgid "Hardware Address"
+msgstr "硬體位址"
 
 #. Driver
 #: ../src/applet-dialogs.c:551
-msgid "Driver:"
-msgstr "驅動程式："
+msgid "Driver"
+msgstr "驅動程式"
 
 #: ../src/applet-dialogs.c:586
-msgid "Speed:"
-msgstr "速度："
+msgid "Speed"
+msgstr "速度"
 
 #: ../src/applet-dialogs.c:601
 msgid "Security:"
@@ -917,8 +917,8 @@ msgid "IPv4"
 msgstr "IPv4"
 
 #: ../src/applet-dialogs.c:639 ../src/applet-dialogs.c:690
-msgid "Default Route:"
-msgstr "預設路由："
+msgid "Default Route"
+msgstr "預設路由"
 
 #. --- IPv6 ---
 #: ../src/applet-dialogs.c:659 ../src/applet-dialogs.c:874
@@ -931,24 +931,24 @@ msgid "Ignored"
 msgstr "已忽略"
 
 #: ../src/applet-dialogs.c:816
-msgid "VPN Type:"
-msgstr "VPN 類型："
+msgid "VPN Type"
+msgstr "VPN 類型"
 
 #: ../src/applet-dialogs.c:823
-msgid "VPN Gateway:"
-msgstr "VPN 閘道器："
+msgid "VPN Gateway"
+msgstr "VPN 閘道器"
 
 #: ../src/applet-dialogs.c:829
-msgid "VPN Username:"
-msgstr "VPN 使用者名稱："
+msgid "VPN Username"
+msgstr "VPN 使用者名稱"
 
 #: ../src/applet-dialogs.c:835
-msgid "VPN Banner:"
-msgstr "VPN 旗幟："
+msgid "VPN Banner"
+msgstr "VPN 旗幟"
 
 #: ../src/applet-dialogs.c:841
-msgid "Base Connection:"
-msgstr "基礎連線："
+msgid "Base Connection"
+msgstr "基礎連線"
 
 #: ../src/applet-dialogs.c:843 ../src/libnm-gtk/nm-ui-utils.c:343
 msgid "Unknown"
